--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
@@ -23,6 +28,10 @@ nav{
     align-items: center;
     justify-content: space-between;
 }
+header{
+    padding: 50px 150px;
+}
+    
 .txt-primary{
     color: var(--primary-color);
     font-size: 40px;
@@ -32,7 +41,7 @@ nav{
 }                                                                                                                          
 .btn-primary {
     background: var(--primary-color);
-    color: #FFFFFF;
+    color: white ;
     border-radius: 8px;
     padding: 15px 30px;
     border: none;
@@ -41,15 +50,32 @@ nav{
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.2s ease;
     text-decoration: none;
+    
 }
-
-.btn-primary:hover {
-    background-color: #332df5;
-    transform: translateY(-2px);
+    
+button:hover{
+    background-color: aqua;
+    animation: glow 1s infinite alternate;
 }
-
-.btn-primary:active {
-    transform: translateY(0);
-    background-color: #332df5;
-    opacity: 0.9;
+@keyframes glow{
+    form{box-shadow: 0 0 10px purple;}
+    to{box-shadow: 0 0 20px purple;}
+}
+h3{
+    font-size: 65px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 3rem;
+}
+.banner-content{
+    align-items: center;
+    padding: 137px;
+}
+.banner{
+    text-align: center;
+}
+header{
+    background-image: url(../Assets/Hero-bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
