add footer section

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,9 @@
     --primary-color: #4E47FF;
     --second-color: #252432;
 }
-
+body{
+    background-color: #f5f8ff;
+}
 
 
 
@@ -55,7 +57,7 @@ header{
 }
     
 button:hover{
-    background-color: aqua;
+    background-color: #1b14ddbd;
     animation: glow 1s infinite alternate;
 }
 @keyframes glow{
@@ -136,3 +138,76 @@ header{
      margin-bottom: 1.5rem;
 }
 /* user input */
+.user{
+    display: flex;
+    justify-content: space-between;
+    max-width: 1300px ;
+    margin: 3rem auto;
+    align-items: center;
+    padding: 3rem 0rem;
+    flex-wrap: wrap;
+    border-radius: 10px;
+    
+}
+.user h1{
+    font-size: 5rem;
+    /* padding:0 10rem; */
+    line-height: 1.3;
+    text-align: left;
+}
+form{
+    display: flex;
+    flex-direction: column;
+    /* align-items: center;  */
+    padding: 1rem;
+    gap: 1rem;
+}
+.input-area{
+    flex: 1 1 300px;
+    max-width: 500px;
+}
+form label{
+    font-size: 1rem;
+    margin-bottom: 0.3rem;
+    color: #000000;
+}
+form input[type="email"],
+form input[type="text"], 
+form textarea{
+    padding: 0.75rem;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    width: 100%;
+    font-size: 1rem;
+}
+form button{
+    width: 100%;
+    
+}
+
+form textarea{
+    resize: vertical;
+    min-height: 150px;
+}
+/* footer section */
+footer{
+    margin-top: 3rem;
+    padding: 3rem;
+    max-width: 1300px;
+    margin: 0 auto;
+    text-align: center;
+}
+footer h1{
+    font-size: 4.5rem;
+    font-weight: 900px;
+    margin-bottom: 1rem;
+    color: var(--primary-color);
+}
+footer p{
+    color: var(--second-color);
+    margin-bottom: 2rem;
+}
+footer li{
+    list-style: none;
+}
