--- a/styles/style.css
+++ b/styles/style.css
@@ -181,11 +181,6 @@ form textarea{
     width: 100%;
     font-size: 1rem;
 }
-form button{
-    width: 100%;
-    
-}
-
 form textarea{
     resize: vertical;
     min-height: 150px;
@@ -194,9 +189,13 @@ form textarea{
 footer{
     margin-top: 3rem;
     padding: 3rem;
-    max-width: 1300px;
     margin: 0 auto;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #ffff;
+    
 }
 footer h1{
     font-size: 4.5rem;
@@ -210,4 +209,13 @@ footer p{
 }
 footer li{
     list-style: none;
+    padding: 2rem ;
 }
+footer ul{
+    display: flex;
+    gap: 2rem;
+}
+footer li:hover{
+    background-color: #4E47FF;
+}
+
